language/move-lang/tests/move_check/typing/assign_pop_resource.move
module M {
    resource struct R {}

    fun t0() {
        _ = R{};
        (_, _) = (R{}, R{});
    }
}
